--- a/README.Rmd
+++ b/README.Rmd
@@ -41,7 +41,7 @@ those methods are primarily designed for comparison with `clmi`.
 
 ## Installation
 `lodi` requires `rlang >= 0.3.0` to be installed, so you may
-want to install /update `rlang` before installing `lodi`.
+want to install or update `rlang` before installing `lodi`.
 
 The package can be installed from CRAN
 ```{r, eval = F}
